service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80": "nginx-backendconfig"}}'
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: "TCP"
  selector:
    app: nginx
